--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj2">
                         <img src="images/ourcity.png" alt="Project 2 Screenshot"> <!-- REPLACE -->
                          <div class="project-overlay">
-                            <h4>OurCity – Task Management for Reporting and Repair</h4> <!-- REPLACE -->
+                            <h4>OurCity – OurCity Infrastructure Reporting Web App</h4> <!-- REPLACE -->
                             <div class="project-tags">
                                 <span class="tag">Laravel</span> <span class="tag">jQuery DataTables</span>
                              </div>
