--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
                     <!-- Project 9 -->
                     <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj9">
-                        <img src="images/simedi.png" alt="Simedi Website Screenshot"> <!-- Ganti dengan gambar yang sesuai -->
+                        <img src="images/simedi.png" alt="Simedi Website Screenshot">
                         <div class="project-overlay">
                             <h4>Simedi – Plantation Inventory Management System</h4>
                             <div class="project-tags">
@@ -261,6 +261,28 @@
                              </div>
                         </div>
                     </div>
+                     <!-- Project 10: MyPartitur -->
+                     <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj10">
+                        <img src="images/partitur.png" alt="MyPartitur App Screenshot">
+                         <div class="project-overlay">
+                            <h4>MyPartitur – Digital Music Partitur Storage</h4>
+                             <div class="project-tags">
+                                 <span class="tag">Flutter</span> <span class="tag">Firebase</span>
+                             </div>
+                        </div>
+                    </div>
+                     <!-- Project 11: Clean Cycle -->
+                     <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj11">
+                        <img src="images/cleancycle.png" alt="Clean Cycle UI/UX Design"> <!-- Thumbnail -->
+                        <div class="project-overlay">
+                            <h4>Clean Cycle – Waste Reporting App</h4>
+                            <div class="project-tags">
+                                <span class="tag">UI/UX Design</span>
+                                <span class="tag">Flutter</span>
+                                <span class="tag">Mobile App Design</span>
+                            </div>
+                        </div>
+                    </div>
                     <!-- Add more project items here if needed -->
                 </div>
             </div>
@@ -297,61 +319,59 @@
                         </div>
                     </div>
 
-                    <!-- Certification 4 (PDF Link) -->
+                    <!-- Certification 4 -->
                     <div class="certification-item animate-on-scroll fade-in" data-item-type="certification" data-id="cert4">
-                        <!-- **** THIS IS THE FIX: Use an actual IMAGE file for the thumbnail **** -->
                         <img src="images/dicoding.png" alt="Backend Node.js with AWS Certification Thumbnail">
                         <div class="certification-overlay">
                             <h4>Back-End Developer with Node.js & AWS</h4>
                         </div>
                     </div>
-                    <!-- Certification 5 - AWS Cloud Practitioner Essentials -->
+                    <!-- Certification 5 -->
                     <div class="certification-item animate-on-scroll fade-in" data-item-type="certification" data-id="cert5">
-                        <img src="images/aws-cloud.png" alt="AWS Cloud Practitioner Certification Thumbnail"> <!-- Ganti dengan gambar yang sesuai -->
+                        <img src="images/aws-cloud.png" alt="AWS Cloud Practitioner Certification Thumbnail">
                         <div class="certification-overlay">
                             <h4>AWS Cloud Practitioner Essentials</h4>
                         </div>
                     </div>
-
 
                 </div>
             </div>
         </section>
 
 
-                <!-- Contact Section -->
-                <section id="contact" class="contact-section">
-                    <div class="container">
-                       <h2 class="text-center animate-on-scroll fade-in">Let's Connect</h2>
-                       <p class="text-center section-subtitle animate-on-scroll fade-in">Interested in working together or have a question?</p>
-                       <div class="contact-content">
-                           <div class="contact-info animate-on-scroll slide-up">
-                               <h3>Contact Details</h3>
-                               <p><i class="fas fa-envelope"></i> <a href="mailto:andykasalom@gmail.com">andykasalom@gmail.com</a></p>
-                               <p><i class="fas fa-phone"></i> <a href="tel:+6285173012307">+62 851 7301 2307</a></p>
-                               <p><i class="fas fa-map-marker-alt"></i> Sidoarjo, Indonesia</p>
-                               <div class="contact-social-links">
-                                    <a href="https://www.linkedin.com/in/andyka-salom/" target="_blank" aria-label="LinkedIn" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                                   <a href="https://github.com/andyka-salom" target="_blank" aria-label="GitHub" title="GitHub"><i class="fab fa-github"></i></a>
-                                   <a href="https://www.instagram.com/nextcodee" target="_blank" aria-label="Instagram" title="Instagram"><i class="fab fa-instagram"></i></a>
-                               </div>
-                           </div>
-                           <div class="contact-form-container animate-on-scroll slide-up delay-1">
-                               <h3>Send a Message</h3>
-                               <!-- **** THIS IS THE FIX: Update the action attribute **** -->
-                               <form id="contact-form" action="send_email.php" method="POST">
-                                   <div class="form-group"> <input type="text" id="name" name="name" placeholder="Your Name" required> </div>
-                                   <div class="form-group"> <input type="email" id="email" name="email" placeholder="Your Email" required> </div>
-                                   <div class="form-group"> <input type="text" id="subject" name="subject" placeholder="Subject" required> </div>
-                                   <div class="form-group"> <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea> </div>
-                                   <button type="submit" class="btn btn-primary btn-submit">Send Message <i class="fas fa-paper-plane"></i></button>
-                               </form>
-                                <p id="form-status"></p> <!-- Status message will appear here -->
-                           </div>
+        <!-- Contact Section -->
+        <section id="contact" class="contact-section">
+            <div class="container">
+               <h2 class="text-center animate-on-scroll fade-in">Let's Connect</h2>
+               <p class="text-center section-subtitle animate-on-scroll fade-in">Interested in working together or have a question?</p>
+               <div class="contact-content">
+                   <div class="contact-info animate-on-scroll slide-up">
+                       <h3>Contact Details</h3>
+                       <p><i class="fas fa-envelope"></i> <a href="mailto:andykasalom@gmail.com">andykasalom@gmail.com</a></p>
+                       <p><i class="fas fa-phone"></i> <a href="tel:+6285173012307">+62 851 7301 2307</a></p>
+                       <p><i class="fas fa-map-marker-alt"></i> Sidoarjo, Indonesia</p>
+                       <div class="contact-social-links">
+                            <a href="https://www.linkedin.com/in/andyka-salom/" target="_blank" aria-label="LinkedIn" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                           <a href="https://github.com/andyka-salom" target="_blank" aria-label="GitHub" title="GitHub"><i class="fab fa-github"></i></a>
+                           <a href="https://www.instagram.com/nextcodee" target="_blank" aria-label="Instagram" title="Instagram"><i class="fab fa-instagram"></i></a>
                        </div>
                    </div>
-               </section>
-           </main> <!-- Assuming </main> was just below this section -->
+                   <div class="contact-form-container animate-on-scroll slide-up delay-1">
+                       <h3>Send a Message</h3>
+                       <!-- Make sure 'send_email.php' exists and works correctly -->
+                       <form id="contact-form" action="send_email.php" method="POST">
+                           <div class="form-group"> <input type="text" id="name" name="name" placeholder="Your Name" required> </div>
+                           <div class="form-group"> <input type="email" id="email" name="email" placeholder="Your Email" required> </div>
+                           <div class="form-group"> <input type="text" id="subject" name="subject" placeholder="Subject" required> </div>
+                           <div class="form-group"> <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea> </div>
+                           <button type="submit" class="btn btn-primary btn-submit">Send Message <i class="fas fa-paper-plane"></i></button>
+                       </form>
+                        <p id="form-status"></p> <!-- Status message will appear here -->
+                   </div>
+               </div>
+           </div>
+       </section>
+   </main>
 
     <!-- Footer -->
     <footer class="footer">
@@ -366,11 +386,16 @@
         <div class="modal-content">
             <span class="modal-close">×</span>
             <div class="modal-body">
+                <!-- Video Tag (initially hidden) - ADDED FOR VIDEO -->
+                <video id="modal-video" src="" style="display: none; width: 100%; max-height: 70vh; border-radius: var(--border-radius);" controls muted loop>
+                     Your browser does not support the video tag.
+                </video>
+
                 <!-- Image Tag (initially hidden) -->
                 <img id="modal-img" src="" alt="Item Image" style="display: none;">
 
                 <!-- Iframe for PDFs (initially hidden) -->
-                <iframe id="modal-iframe" src="" style="display: none; width: 100%; height: 60vh; border: none;" title="PDF Document Viewer"></iframe>
+                <iframe id="modal-iframe" src="" style="display: none; width: 100%; height: 70vh; border: none;" title="PDF Document Viewer"></iframe>
 
                 <h3 id="modal-title"></h3>
                 <div class="modal-details">
